// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IaaS should match snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-text-base el-title"
        >
          IaaS Pipelines
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                aria-controls=":r2:"
                aria-expanded="false"
                aria-haspopup="listbox"
                class="mocked-styled-84 el-searchable-dropdown-container"
                role="combobox"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="developerId"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
          </div>
        </form>
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-text-base el-title"
      >
        IaaS Pipelines
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              aria-controls=":r2:"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mocked-styled-84 el-searchable-dropdown-container"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name search"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <input
                aria-label="Input type undefined"
                class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`IaaS should match snapshot with pipelines 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-text-base el-title"
        >
          IaaS Pipelines
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                aria-controls=":r0:"
                aria-expanded="false"
                aria-haspopup="listbox"
                class="mocked-styled-84 el-searchable-dropdown-container"
                role="combobox"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="developerId"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="3"
          role="table"
        >
          <div
            class="mocked-styled-101 el-table-headers-row"
            role="row"
          >
            <div
              aria-label="Name"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Name
            </div>
            <div
              aria-label="Build Status"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Build Status
            </div>
            <div
              aria-label="Repository"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Repository
            </div>
            <div
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name settings"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-110 el-table-row-container"
            role="row"
          >
            <div
              class="mocked-styled-103 el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1.25rem;"
                    title="Icon image with name insights"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.375 15.375h-2.25C3.504 15.375 3 15.879 3 16.5V21h4.5v-4.5c0-.621-.504-1.125-1.125-1.125m6.75-5.625h-2.25c-.621 0-1.125.504-1.125 1.125V21h4.5V10.875c0-.621-.504-1.125-1.125-1.125M19.875 3h-2.25c-.621 0-1.125.504-1.125 1.125V21H21V4.125C21 3.504 20.496 3 19.875 3"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Name"
                >
                  reapit-ltd-internal-thoughtless-cub
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Build Status"
                >
                  <span
                    class="el-intent-pending el-status-indicator"
                  />
                  Pre Provisioned
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Repository"
                />
              </div>
              <div
                class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                role="cell"
                tabindex="0"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name more"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-113 el-table-expandable-row"
            >
              <div
                class="mocked-styled-114 el-table-expandable-container"
              >
                <p
                  class="el-text-base el-body-text el-has-bold-text"
                >
                  Pipeline
                </p>
                <div
                  class="el-mb12 el-form-layout"
                >
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Pipeline Name
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      reapit-ltd-internal-thoughtless-cub
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Pipeline Id
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      bb2061b6-b994-4851-bc5c-94f3a42c3a79
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      App Id
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      bb2061b6-b994-4851-bc5c-94f3a42c3a79
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Developer Id
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      421b65bc-dd09-4c34-90fa-dacc3cd2ff5a
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Build Status
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      PRE_PROVISIONED
                    </p>
                  </div>
                </div>
                <p
                  class="el-text-base el-body-text el-has-bold-text"
                >
                  Repository
                </p>
                <div
                  class="el-mb12 el-form-layout"
                >
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Repository Url
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    />
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Repository Id
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      0
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Repo Installation Id
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      0
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Branch
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      master
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Out Dir
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      build
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Package Manager
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      npm
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Build Command
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      build
                    </p>
                  </div>
                </div>
                <p
                  class="el-text-base el-body-text el-has-bold-text"
                >
                  Domain
                </p>
                <div
                  class="el-mb12 el-form-layout"
                >
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Sub Domain
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      gutsy-bikes
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Sub Domain Url
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    >
                      https://gutsy-bikes.reapit.cloud
                    </p>
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Custom Domain
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    />
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Certificate Status
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    />
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Verify DNS TXT Record Name Prefix
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    />
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      Verify DNS TXT Record Value
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    />
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      CloudFrontId
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    />
                  </div>
                  <div
                    class="mocked-styled-133 el-input-wrap"
                  >
                    <label
                      class="mocked-styled-41 el-label"
                    >
                      CertificateArn
                    </label>
                    <p
                      class="el-text-base el-body-text"
                    />
                  </div>
                </div>
                <p
                  class="el-text-base el-body-text el-has-bold-text"
                >
                  Actions
                </p>
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="mocked-styled-3 el-button-group-inner"
                  >
                    <button
                      class="el-intent-danger el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Delete Pipeline
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-71 el-pagination-wrap"
        >
          <button
            aria-label="Previous"
            class="mocked-styled-74 el-pagination-button"
            data-testid="back-button"
            role="button"
            type="button"
          >
            <span
              class="el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name chevronLeft"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <div
            class="mocked-styled-72 el-pagination-text"
          >
            <input
              aria-label="Current page number, edit to select page of 6 available"
              class="mocked-styled-73 el-pagination-input"
              value="1"
            />
             
            of 
            6
          </div>
          <button
            aria-label="Next"
            class="mocked-styled-74 el-pagination-button"
            data-testid="forward-button"
            role="button"
            type="button"
          >
            <span
              class="el-pagination-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name chevronRight"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-text-base el-title"
      >
        IaaS Pipelines
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              aria-controls=":r0:"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mocked-styled-84 el-searchable-dropdown-container"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="mocked-styled-87 el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name search"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <input
                aria-label="Input type undefined"
                class="mocked-styled-89 el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="3"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Name
          </div>
          <div
            aria-label="Build Status"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Build Status
          </div>
          <div
            aria-label="Repository"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Repository
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name insights"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.375 15.375h-2.25C3.504 15.375 3 15.879 3 16.5V21h4.5v-4.5c0-.621-.504-1.125-1.125-1.125m6.75-5.625h-2.25c-.621 0-1.125.504-1.125 1.125V21h4.5V10.875c0-.621-.504-1.125-1.125-1.125M19.875 3h-2.25c-.621 0-1.125.504-1.125 1.125V21H21V4.125C21 3.504 20.496 3 19.875 3"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Name"
              >
                reapit-ltd-internal-thoughtless-cub
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Build Status"
              >
                <span
                  class="el-intent-pending el-status-indicator"
                />
                Pre Provisioned
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Repository"
              />
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <p
                class="el-text-base el-body-text el-has-bold-text"
              >
                Pipeline
              </p>
              <div
                class="el-mb12 el-form-layout"
              >
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Pipeline Name
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    reapit-ltd-internal-thoughtless-cub
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Pipeline Id
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    bb2061b6-b994-4851-bc5c-94f3a42c3a79
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    App Id
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    bb2061b6-b994-4851-bc5c-94f3a42c3a79
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Developer Id
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    421b65bc-dd09-4c34-90fa-dacc3cd2ff5a
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Build Status
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    PRE_PROVISIONED
                  </p>
                </div>
              </div>
              <p
                class="el-text-base el-body-text el-has-bold-text"
              >
                Repository
              </p>
              <div
                class="el-mb12 el-form-layout"
              >
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Repository Url
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  />
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Repository Id
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    0
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Repo Installation Id
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    0
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Branch
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    master
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Out Dir
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    build
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Package Manager
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    npm
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Build Command
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    build
                  </p>
                </div>
              </div>
              <p
                class="el-text-base el-body-text el-has-bold-text"
              >
                Domain
              </p>
              <div
                class="el-mb12 el-form-layout"
              >
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Sub Domain
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    gutsy-bikes
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Sub Domain Url
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  >
                    https://gutsy-bikes.reapit.cloud
                  </p>
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Custom Domain
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  />
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Certificate Status
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  />
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Verify DNS TXT Record Name Prefix
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  />
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Verify DNS TXT Record Value
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  />
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    CloudFrontId
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  />
                </div>
                <div
                  class="mocked-styled-133 el-input-wrap"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    CertificateArn
                  </label>
                  <p
                    class="el-text-base el-body-text"
                  />
                </div>
              </div>
              <p
                class="el-text-base el-body-text el-has-bold-text"
              >
                Actions
              </p>
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="mocked-styled-3 el-button-group-inner"
                >
                  <button
                    class="el-intent-danger el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Delete Pipeline
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-71 el-pagination-wrap"
      >
        <button
          aria-label="Previous"
          class="mocked-styled-74 el-pagination-button"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronLeft"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="mocked-styled-72 el-pagination-text"
        >
          <input
            aria-label="Current page number, edit to select page of 6 available"
            class="mocked-styled-73 el-pagination-input"
            value="1"
          />
           
          of 
          6
        </div>
        <button
          aria-label="Next"
          class="mocked-styled-74 el-pagination-button"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <span
            class="el-pagination-primary el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronRight"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
